[gd_scene load_steps=2 format=3 uid="uid://bovh403sqglwm"]

[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_g0khc"]

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_g0khc")

[node name="PlayerArea" type="Area2D" parent="."]

[node name="PlayerCollisionPoly" type="CollisionPolygon2D" parent="PlayerArea"]
polygon = PackedVector2Array(0, -24, 16, 16, 0, 8, -16, 16)

[node name="sideOne" type="Line2D" parent="."]
points = PackedVector2Array(0, -24, 16, 16)
width = 2.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="sideTwo" type="Line2D" parent="."]
position = Vector2(56, 107)
points = PackedVector2Array(-40, -91, -56, -99)
width = 2.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="sideThree" type="Line2D" parent="."]
points = PackedVector2Array(0, 8, -16, 16)
width = 2.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="sideFour" type="Line2D" parent="."]
position = Vector2(0, -8)
points = PackedVector2Array(-16, 24, 0, -16)
width = 2.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[connection signal="area_entered" from="PlayerArea" to="." method="_on_player_area_area_entered"]
